# mimoshape

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
data/: roadsection_220s_300hz.npz
examples/: mimo_from_record.py  siso_kurtosis.py  siso_min_crest.py
paper/: refs.bib  sss.tex
paper/tables/: convergence_stats.tex  crest_bench_stats.tex  crest_benchmark.tex  crest_stats.tex  kurt_floor.tex  mimo_moments.tex  multimodel_stats.tex  optimizer_beta_continuation.tex  optimizer_comparison.tex  optimizer_stats.tex  restart_stats.tex  road_cokurt.tex  road_stats.tex  timing.tex  timing_stats.tex
papers/26293/: metadata.tex  refs.bib  sss.tex
papers/26293/meta/: metadata.tex
papers/26293/tables/: crest_bench_stats.tex  crest_benchmark.tex  mimo_moments.tex  multimodel_stats.tex  optimizer_beta_continuation.tex  optimizer_beta_continuation_stats.tex  optimizer_comparison.tex  optimizer_stats.tex  restart_stats.tex  road_moments.tex  road_stats.tex  timing.tex  timing_stats.tex
scripts/: code_metadata.json  extract_abstract.py  figures.cmd  file_utils.py  make_figures.py  metadata.json  publish_release.py  release.cmd
scripts/papers/26293/: make_figures.py  metadata.json
src/mimoshape/: __init__.py  estimate.py  moments.py  multimodel.py  shaper.py  stationarity.py
src/synthsig/: __init__.py  shaper.py
tests/: test_data_record.py  test_estimate.py  test_gradients.py  test_multimodel.py  test_release_scripts.py  test_stationarity.py
