[project]
name = "mimoshape"
version = "0.0.0"
description = ""
authors = []
readme = "README.md"
license = { file = "LICENSE" }

requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
]

[project.optional-dependencies]
examples = ["matplotlib", "nlopt>=2.7"]
release = ["PyPDF2", "PyGithub", "tomli_w"]

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mimoshape"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# Build figures and tables from paper
[tool.hatch.envs.figures]
features = ["examples"]

[tool.hatch.envs.figures.scripts]
run = "python scripts/make_figures.py"

# Build release for paper
[tool.hatch.envs.release]
features = ["examples", "release"]

[tool.hatch.envs.release.scripts]
run = "python scripts/publish_release.py"

# the papers
[tool.hatch.envs.26293.scripts]
figures = "hatch run figures -- -p 26293"
release = "hatch run release -- -p 26293"

