[project]
name = "mimoshape"
version = "0.0.0"
description = ""
authors = []
readme = "README.md"
license = { file = "LICENSE" }

requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
]

[project.optional-dependencies]
examples = ["matplotlib", "nlopt>=2.7"]
release = ["PyPDF2", "PyGithub", "tomli_w"]

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]


